# AofCode_Cpp

./: .clang-format  .clang-tidy  .gitignore  ProjectOptions.cmake
.github/workflows/: ci.yml
cmake/: Doxygen.cmake
configured_files/: CMakeLists.txt.in  CMakeLists.txt.test.in  day_details.cpp.in  day_details.hpp.in  day_main.cpp.in
include/AofCode_Cpp/: aoc_library.hpp
src/aoc_library/: aoc_library.cpp
src/campaigns/: CMakeLists.txt
src/campaigns/2022/: CMakeLists.txt
src/campaigns/2022/day01/: 2022_day01.cpp  2022_day01.hpp  CMakeLists.txt
src/campaigns/2022/day02/: 2022_day02.cpp  2022_day02.hpp  CMakeLists.txt  main.cpp
src/campaigns/2022/day03/: 2022_day03.cpp  2022_day03.hpp  CMakeLists.txt  main.cpp
src/campaigns/2022/day04/: 2022_day04.cpp  2022_day04.hpp  CMakeLists.txt  main.cpp
src/campaigns/2022/day20/: 2022_day20.cpp  2022_day20.hpp  CMakeLists.txt  main.cpp
src/campaigns/2022/day21/: 2022_day21.cpp  2022_day21.hpp  CMakeLists.txt  main.cpp
src/campaigns/2022/day22/: 2022_day22.cpp  2022_day22.hpp  CMakeLists.txt  main.cpp
src/campaigns/2022/day23/: 2022_day23.cpp  2022_day23.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day01/: 2023_day01.cpp  2023_day01.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day02/: 2023_day02.cpp  2023_day02.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day03/: 2023_day03.cpp  2023_day03.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day04/: 2023_day04.cpp  2023_day04.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day05/: 2023_day05.cpp  2023_day05.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day06/: 2023_day06.cpp  2023_day06.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day07/: 2023_day07.cpp  2023_day07.hpp  CMakeLists.txt  card_dump.txt  main.cpp
src/campaigns/2023/day08/: 2023_day08.cpp  2023_day08.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day09/: 2023_day09.cpp  2023_day09.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day10/: 2023_day10.cpp  2023_day10.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day11/: 2023_day11.cpp  2023_day11.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day12/: 2023_day12.cpp  2023_day12.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day13/: 2023_day13.cpp  2023_day13.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day14/: 2023_day14.cpp  2023_day14.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day15/: 2023_day15.cpp  2023_day15.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day16/: 2023_day16.cpp  2023_day16.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day17/: 2023_day17.cpp  2023_day17.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day18/: 2023_day18.cpp  2023_day18.hpp  CMakeLists.txt  lagoon.txt  main.cpp  trenches.txt
src/campaigns/2023/day19/: 2023_day19.cpp  2023_day19.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day20/: 2023_day20.cpp  2023_day20.hpp  CMakeLists.txt  input.dot  main.cpp
src/campaigns/2023/day21/: 2023_day21.cpp  2023_day21.hpp  CMakeLists.txt  main.cpp
src/campaigns/2023/day22/: 2023_day22.cpp  2023_day22.hpp  CMakeLists.txt  example  example.cpp  main.cpp
src/campaigns/2023/day23/: 2023_day23.cpp  2023_day23.hpp  CMakeLists.txt  main.cpp
test/: AoCLib_tests.cpp  CMakeLists.txt
test/campaigns/: CMakeLists.txt
test/campaigns/2022/day01/: day01_test.cpp
test/campaigns/2022/day02/: CMakeLists.txt  day02_test.cpp
test/campaigns/2022/day03/: CMakeLists.txt  day03_test.cpp
test/campaigns/2022/day04/: CMakeLists.txt  day04_test.cpp
test/campaigns/2022/day20/: CMakeLists.txt  day20_test.cpp
test/campaigns/2022/day21/: CMakeLists.txt  day21_test.cpp
test/campaigns/2022/day22/: CMakeLists.txt  day22_test.cpp
test/campaigns/2022/day23/: CMakeLists.txt  day23_test.cpp
test/campaigns/2023/: CMakeLists.txt  day18trenches.txt
test/campaigns/2023/day01/: CMakeLists.txt  day01_test.cpp
test/campaigns/2023/day02/: CMakeLists.txt  day02_test.cpp
test/campaigns/2023/day03/: CMakeLists.txt  day03_test.cpp
test/campaigns/2023/day04/: CMakeLists.txt  day04_test.cpp
test/campaigns/2023/day05/: CMakeLists.txt  day05_test.cpp
test/campaigns/2023/day06/: CMakeLists.txt  day06_test.cpp
test/campaigns/2023/day07/: CMakeLists.txt  card_dump.txt  day07_test.cpp
test/campaigns/2023/day08/: CMakeLists.txt  day08_test.cpp
test/campaigns/2023/day09/: CMakeLists.txt  day09_test.cpp  test.txt
test/campaigns/2023/day10/: CMakeLists.txt  day10_test.cpp
test/campaigns/2023/day11/: CMakeLists.txt  day11_test.cpp
test/campaigns/2023/day12/: CMakeLists.txt  day12_test.cpp
test/campaigns/2023/day13/: CMakeLists.txt  day13_test.cpp
test/campaigns/2023/day14/: CMakeLists.txt  day14_test.cpp
test/campaigns/2023/day15/: CMakeLists.txt  day15_test.cpp
test/campaigns/2023/day16/: CMakeLists.txt  day16_test.cpp
test/campaigns/2023/day17/: CMakeLists.txt  day17_test.cpp
test/campaigns/2023/day18/: CMakeLists.txt  day18_test.cpp  lagoon.txt
test/campaigns/2023/day19/: CMakeLists.txt  day19_test.cpp  solved.cpp
test/campaigns/2023/day20/: CMakeLists.txt  day20_test.cpp  test.dot
test/campaigns/2023/day21/: CMakeLists.txt  day21_test.cpp
test/campaigns/2023/day22/: CMakeLists.txt  day22_test.cpp
test/campaigns/2023/day23/: CMakeLists.txt  day23_test.cpp  digraph.txt  nodes.txt
